[tool.poetry]
name = "vertigos-ecocli"
version = "0.1.0"
description = ""
authors = ["Noah Crocker <vertigoetrex@users.noreply.github.com>"]
readme = "README.md"
packages = [{include = "vertigos_ecocli"}]

[tool.poetry.dependencies]
python = "^3.10"
requests = "^2.31.0"
click = "^8.1.3"
requests-oauthlib = "^1.3.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
